Changed the height of one of the elements to fix the issue of overlapping of text and buttn when screen size is reduced

--- a/src/assets/css/whole.css
+++ b/src/assets/css/whole.css
@@ -905,7 +905,7 @@ nav.nav-centered.outOfSight .logo {
 .btn {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 0 10px;
-  height: 40px;
+  height: 30px;
   min-width: 150px;
   line-height: 36px;
   font-size: 12px;
